--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "description": "simple game",
   "main": "main.js",
+  "watch": {
+    "build": {
+      "patterns": [
+        "src/js"
+      ],
+      "extensions": "js"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build.js",
+    "watch": "npm-watch",
     "serve": "cd dist && node ../node_modules/static-here/bin/static-here 9999 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "esbuild": "^0.13.12",
+    "npm-watch": "^0.11.0",
     "recursive-copy": "^2.0.13",
     "static-here": "^1.0.0"
   },
